CocaColaProjectBidev_2/src/objects/Milestone1_Task__c.object
<CustomObject>
    <description>Force.com Labs - PM - An activity that has hours, budget, and is assigned to a User.</description>
    <fields>
        <fullName>Accountable_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accountable/Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>このタスクの責任者。デフォルトでは現在のユーザ。</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <inlineHelpText>ブロックされた理由</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ブロック</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>自分がわかるように分類わけを設定</inlineHelpText>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Functional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>このタスクの完了状態。</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Late_Formula__c</fullName>
        <formula>Today() -  Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <inlineHelpText>このタスクの遅延日数</inlineHelpText>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delays_Date__c</fullName>
        <label>Delays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>タスクの概要。目的などを書く。</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>このタスクの完了期限日。デフォルトではマイルストーンの期限日が設定される。</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_GUID__c</fullName>
        <description>This field is used to track Email for a reply to email chain.</description>
        <externalId>true</externalId>
        <label>Email GUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense__c</fullName>
        <inlineHelpText>タスクから算出された推定費用</inlineHelpText>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>タスクから算出された推定時間</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Balance__c</fullName>
        <formula>Estimated_Expense__c - Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>推定される総費用</inlineHelpText>
        <label>Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GanttOverall_Status__c</fullName>
        <formula>if ( Complete__c == true, &apos;Complete&apos;,
if ( and( Days_Late_Formula__c &gt; 0, Blocked__c ),
if(Len( Text(Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked&apos; , &apos;Late &amp; Blocked&apos;),
if (Days_Late_Formula__c &gt; 0, 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Late&apos;, &apos;Late&apos;),
if(Blocked__c == true, 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Blocked&apos;, &apos;Blocked&apos;), 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Open&apos;, &apos;Open&apos;) 
))))</formula>
        <label>GanttOverall_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Balance__c</fullName>
        <formula>Estimated_Hours__c - Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>推定される総時間</inlineHelpText>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Helper__c</fullName>
        <formula>Assigned_To__r.FirstName &amp; &apos; &apos; &amp; Assigned_To__r.LastName &amp; &apos; &apos; &amp; Project_Milestone__r.Project__r.Name &amp; &apos; &apos; &amp; Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name</formula>
        <label>Index Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <externalId>true</externalId>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <description>Date Time the last email was sent to this task.</description>
        <inlineHelpText>最後のメールを受信した日時。タスクはメール経由でも作成可能で、タスクのメモ＆添付ファイルに保存される。</inlineHelpText>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Members</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_Grandparent__c</fullName>
        <formula>if (
 Project_Milestone__r.Parent_Milestone__c != null, 
 Project_Milestone__r.Parent_Milestone__r.Name , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Grandparent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missed_Deadline_explanation__c</fullName>
        <label>Missed Deadline explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Dependency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Dependency</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Next Dependency</relationshipLabel>
        <relationshipName>Next_Dependency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverAll_PickList_Status__c</fullName>
        <label>OverAll_PickList_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late &amp; Blocked In Progress</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late &amp; Blocked Not Yet Started</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late &amp; Blocked Deferred</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late &amp; Blocked Resolved</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late &amp; Blocked</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late In Progress</fullName>
                <color>#CC0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late Not Yet Started</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late Deferred</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late Resolved</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked In Progress</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked Not Yet Started</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked Deferred</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked Resolved</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open In Progress</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open Not Yet Started</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open Deferred</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open Resolved</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#33CCFF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>if ( Complete__c == true, &apos;Complete&apos;,
  if ( and( Days_Late_Formula__c &gt; 0,  Blocked__c  ),
    if(Len( Text(Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(Task_Stage__c), &apos;Late &amp; Blocked&apos;),
    if (Days_Late_Formula__c &gt; 0,  
      if(Len( Text(Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(Task_Stage__c), &apos;Late&apos;),
      if(Blocked__c == true, 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(Task_Stage__c), &apos;Blocked&apos;), 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>タスクが完了、進行中、遅延、ブロックまたは、遅延ブロックされていることを示す</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>Project_Milestone__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Level4__c</fullName>
        <formula>CASESAFEID(Parent_Task__r.Parent_Task__r.Parent_Task__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent_Level4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Level5__c</fullName>
        <formula>CASESAFEID(Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent_Level5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Level6_Test__c</fullName>
        <formula>CASESAFEID(Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent_Level6_Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Level6__c</fullName>
        <description>Formula field which calculates the parent for level 6</description>
        <formula>CASESAFEID(Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Parent_Task__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Level 6</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Parent_Task__c</fullName>
        <formula>CASESAFEID(Parent_Task__r.Parent_Task__r.Id)</formula>
        <label>Parent_Level3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Child Task</relationshipLabel>
        <relationshipName>Parent_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_to_address_delays__c</fullName>
        <label>Plan to address delays</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Dependency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Dependency</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Pre Dependency</relationshipLabel>
        <relationshipName>Pre_Dependency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Import_Id__c</fullName>
        <label>Predecessor_Task_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>このタスクの前のタスク</inlineHelpText>
        <label>Predecessor Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Successor Tasks</relationshipLabel>
        <relationshipName>Successor_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>このタスクの優先度。0，1，2，3，4で設定。</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgressPer__c</fullName>
        <formula>MID( TEXT(Progress_picklist__c), 0, FIND(&apos;%&apos;, TEXT(Progress_picklist__c))  - 1 )</formula>
        <label>ProgressPer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Color__c</fullName>
        <label>Progress Color</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Late in Progress</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Open Not Yet Start</fullName>
                <color>#F3D904</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress_Description__c</fullName>
        <label>Progress Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Progress(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress_picklist__c</fullName>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>0% (Not Started)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20% (Task Start)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40% (First Review)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60% (Deliverable Written)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80% (Final Review)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% (Sign Off)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>Project_Milestone__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <formula>TEXT(Project_Milestone__r.Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <inlineHelpText>タスクが割り当てられているマイルストーン</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>HYPERLINK(&apos;../&apos; + Project_Milestone__r.Project__c, Project_Milestone__r.Project__r.Name,&apos;_self&apos;)</formula>
        <inlineHelpText>このタスクが属するプロジェクトへのリンク</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_ID__c</fullName>
        <inlineHelpText>全てのタスクとプロジェクトから参照可能なユニークなID</inlineHelpText>
        <label>Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>タスクの開始日</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <inlineHelpText>全てのタスクとプロジェクトから参照可能なユニークなID</inlineHelpText>
        <label>Task Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <inlineHelpText>タスクの状態</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Yet Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interruption</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Status_View__c</fullName>
        <formula>IMAGE( 
CASE(Task_Status__c, 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), &quot;status color&quot; 
)</formula>
        <label>Task Status*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <inlineHelpText>全ての子レコードの総費用</inlineHelpText>
        <label>Total Expense</label>
        <summarizedField>Milestone1_Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>Milestone1_Expense__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <inlineHelpText>全てのレコードの総時間</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>Milestone1_Time__c.Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Time__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>タスク</label>
    <listViews>
        <fullName>ALL_CokeOne</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Short_ID__c</columns>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>CokeOne</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>Coke One</value>
        </filters>
        <label>ALL- CokeOne</label>
        <language>en_US</language>
        <sharedTo>
            <group>CokeOne_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_FP</fullName>
        <columns>Short_ID__c</columns>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>startsWith</operation>
            <value>FP</value>
        </filters>
        <label>ALL- FP</label>
        <language>en_US</language>
        <sharedTo>
            <group>FP_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_RFA1</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectId__c</field>
            <operation>equals</operation>
            <value>a091000000sQ04k</value>
        </filters>
        <label>ALL-RFA1</label>
        <language>en_US</language>
        <sharedTo>
            <group>RFA_Project_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_RFA15</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Complete__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectId__c</field>
            <operation>equals</operation>
            <value>a091000000w66sM</value>
        </filters>
        <label>ALL-RFA1.5</label>
        <language>en_US</language>
        <sharedTo>
            <group>RFA_Project_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_RFA_DeferedTask</fullName>
        <columns>Short_ID__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Task_Stage__c</columns>
        <columns>Complete__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>RFA</value>
        </filters>
        <filters>
            <field>Task_Stage__c</field>
            <operation>equals</operation>
            <value>Deferred</value>
        </filters>
        <label>ALL-RFA_DeferedTask</label>
        <language>en_US</language>
        <sharedTo>
            <group>RFA_Project_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_RFA_OpenTask</fullName>
        <columns>Short_ID__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Complete__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>RFA</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>ALL-RFA_OpenTask</label>
        <language>en_US</language>
        <sharedTo>
            <group>RFA_Project_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Accountable_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Architect</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Complete__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Short_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Milestone__c</field>
            <operation>equals</operation>
            <value>2. Architect</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>2_Architect</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Akita</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Complete__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Short_ID__c</columns>
        <columns>Blocked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Akita</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Assigned to Akita</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_CocaCola_members</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Complete__c</columns>
        <columns>Description__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Short_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Maniwa,Matsushita,Nakano,Maruyama,Cordula</value>
        </filters>
        <label>Assigned to CocaCola members</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Cordula</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Complete__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Short_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Cordula</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Assigned to Cordula san</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Fred</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Complete__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Fred</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Assigned to Fred</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Jia</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Complete__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Short_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Jia</value>
        </filters>
        <filters>
            <field>Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Assigned to Jia</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Maniwa</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Project_Milestone__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Complete__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Short_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Maniwa</value>
        </filters>
        <label>Assigned to Maniwa san</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>